# halide-mini-course

./: .gitignore  README.md
docker/: Dockerfile  build.sh  env.sh  install.sh  remove.sh  run.sh  start.sh
step001-basic/: Makefile  main.cpp
step002-func/: Makefile  README.md  blur.cpp  brighter.cpp  equalization.cpp  thresholding.cpp
step008-matlab/: Makefile  edge.cpp  go.m  main.m  run_octave.sh
step021-signal/: Makefile  go.m  imerror.m  main.m  mfcc.cpp  mfcc_method.m  mmfcc.m  normalization.m  run_mat.sh
step023-android/: build.gradle  settings.gradle
step023-android/app/: .gitignore  build.gradle
step023-android/app/jni/: CMakeLists.txt  utils_jni.cpp
step023-android/app/jni/exposure/: Makefile  build.sh  exposure.cpp
step023-android/app/src/main/: AndroidManifest.xml
step023-android/app/src/main/java/com/example/halidedemo/: MainActivity.kt  Utils.kt
step023-android/app/src/main/res/layout/: activity_main.xml
step023-android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
step023-android/gradle/wrapper/: gradle-wrapper.properties
